--- a/package.json
+++ b/package.json
@@ -14,7 +14,10 @@
     "@strapi/strapi": "4.6.2",
     "@strapi/plugin-users-permissions": "4.6.2",
     "@strapi/plugin-i18n": "4.6.2",
-    "better-sqlite3": "8.0.1"
+    "better-sqlite3": "8.0.1",
+    "serverless-http": "^3.1.1",
+    "serverless-offline": "^12.0.4",
+    "pg": "^8.9.0"
   },
   "author": {
     "name": "A Strapi developer"
